stuck on adding additional functionality, working through bugs

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,8 +57,7 @@ h1{
 }
 
 footer{
-    position: fixed;
-    left: 0;
+    position: relative;
     bottom: 0;
     width: 100%;
     padding: 1em 0 .5em;
